[package]
name = "sadoku"
version = "0.1.0"
authors = ["Kyle Smith <askreet@gmail.com>"]
edition = "2018"

[dependencies]
pancurses = "0.16.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
scraper = "0.12.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"